relative build paths

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <link
             rel="icon"
             type="image/png"
-            href="/assets/fav/fav-32.png"
+            href="assets/fav/fav-32.png"
             sizes="32x32"
 />
         <link
             rel="icon"
             type="image/png"
-            href="/assets/fav/fav-16.png"
+            href="assets/fav/fav-16.png"
             sizes="16x16"
 />
         <meta
