assets/path tidy up

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <link
             rel="icon"
             type="image/png"
-            href="assets/fav/fav-32.png"
+            href="./app/images/fav-32.png"
             sizes="32x32"
 />
         <link
             rel="icon"
             type="image/png"
-            href="assets/fav/fav-16.png"
+            href="./app/images/fav-16.png"
             sizes="16x16"
 />
         <meta
             property="og:image"
-            content="http://nudibranch.uk/assets/images/share.jpg"
+            content="http://nudibranch.uk/share.jpg"
 />
         <style>
             [am-Logo] {
@@ -34,12 +34,12 @@
         <div am-All>
             <a data-logo am-Logo href="https://shop.nudibranchrecords.uk">
                 <canvas width="800" height="800"></canvas>
-                <img src="app/images/logo.svg" alt="Nudibranch"/>
+                <img src="./app/images/logo.svg" alt="Nudibranch"/>
             </a>
         </div>
     </body>
 
-    <script type="module" src="app/index.js"></script>
+    <script type="module" src="./app/index.js"></script>
 
     <script
         async
