fix share image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 />
         <meta
             property="og:image"
-            content="http://nudibranch.uk/share.jpg"
+            content="http://nudibranchrecords.uk/share.jpg"
 />
         <style>
             [am-Logo] {
